# libgit2cpp

./: .gitignore  CMakeLists.txt
.github/workflows/: build.yml
cmake/: AddGitSubmodule.cmake
examples/: init.cpp  status.cpp
include/git2cpp/: remote.h  str_array.h
include/git2cpp/internal/: format.h
src/: remote.cpp
